--- a/form.html
+++ b/form.html
@@ -2,7 +2,7 @@
 <head>
 <meta content="text/html; charset = UTF-8" http-equiv="content-type">
 
-<title>Controle de Estoque</title>
+<title>Controle de Carros</title>
 </head>
 
 <script type="text/javascript">
