--- a/src/main/resources/public/index.html
+++ b/src/main/resources/public/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>Controle de Estoque</title>
+	<title>Controle de Carros</title>
 	<head>
 	<meta http-equiv="refresh" content=1;url="/carro/list/1"></head>
 	<meta content="text/html; charset = UTF-8" http-equiv="content-type">
